[project]
name = "aia-practica4"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.5",
    "kagglehub>=1.0.0",
    "langchain>=1.2.15",
    "langchain-community>=0.4.1",
    "langgraph>=1.1.6",
    "matplotlib>=3.10.8",
    "pandas>=3.0.1",
    "sentence-transformers>=5.3.0",
    "tqdm>=4.67.3",
]
